# TRUNAJOD2.0

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  README_pypi.rst  app.py  clustering_experiment.py  clustering_plot.py  egrid_test.py  feature_correlation.py  main.py  paper.bib  paper.md  pyproject.toml  pytest.ini  random_forest_experiment.py  random_forest_importance_exp.py  requirements-test.txt  requirements.txt  setup.cfg  setup.py  spectral_clustering_experiment.py  stanza_example.py  stanza_test.py  svm_linear_experiment.py  tester.py  texto_prueba.txt  tox.ini  visualize_clustering_experiment.py
.github/workflows/: build.yml  doc.yml  lint.yml
TRUNAJOD/: Emotions.py  EntityGrid.py  IndicesVeliz.py  LexicoSemanticNorm.py  SpanishEmotionLexicon.py  discourse_markers.py  giveness.py  locucionesADV.txt  semantic_measures.py  ttr.py  utils.py  verbos_g.txt  verbos_i.txt  verbos_p.txt
TRUNAJOD_MODELS/: spanish_lexicosemantic_norms.pickle  wordnet_verb_synsets.pickle
docs/: conf.py  index.rst  requirements.txt
docs/api_reference/: discourse_markers.rst  discourse_markers_ref.bib  emotions.rst  emotions_ref.bib  entity_grid.bib  givenness.rst  semantic_measures.rst  ttr.bib  ttr.rst  (+1 more)
tests/: discourse_markers_test.py  emotions_test.py  giveness_test.py  givenness_test.py  lexico_semantic_norms_test.py  semantic_measurements_test.py  semantic_measures_test.py  surface_proxies_test.py  test_syllabizer.py  ttr_test.py  util_test.py  utils_test.py
(+31 files in other folders)
