[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=. --cov-fail-under=80"
testpaths = [
    "tests"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"